Attempt to fix layout alignments

--- a/docs/index.css
+++ b/docs/index.css
@@ -18,15 +18,6 @@ body {
     position: absolute;
 }
 
-#left-container {
-    width: 50vw;
-}
-
-#right-container {
-    width: 50vw;
-    left: 50vw;
-}
-
 #frame-cross {
     position: absolute;
     width: 100vw;
@@ -53,8 +44,8 @@ body {
 
 #name-container {
     position: absolute;
-    margin-right: 14vw;
-    margin-bottom: 40vh;
+    left: 2.5vw;
+    top: 22vh;
 }
 
 #fullname {
@@ -96,6 +87,12 @@ body {
     color: #747579;
 }
 
+#desc-container {
+    position: absolute;
+    left: 53vw;
+    top: 15.5vh;
+}
+
 #desc {
     margin-left: 0.5vw;
     margin-top: 52vh;
@@ -128,9 +125,9 @@ body {
 }
 
 #social-container {
-    position: absolute;
     margin-left: 7.5vw;
-    margin-top: 82vh;
+    margin-right: -5px;
+    margin-top: 3vh;
     display: flex;
     flex-direction: row;
 }
